--- a/app/src/main/res/layout/schoolinfo_scrollview.xml
+++ b/app/src/main/res/layout/schoolinfo_scrollview.xml
@@ -38,14 +38,40 @@
                     android:textSize="@dimen/section_info" />
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/system_icon_height"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:text="Rating"
+                    android:textColor="@color/Black"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/school_rating_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/system_icon_height"
+                    android:layout_gravity="center_vertical|end"
+                    android:layout_weight="1"
+                    android:text="92%"
+                    android:textColor="@color/Black"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
             <ImageView
                 android:layout_width="0dp"
                 android:layout_height="@dimen/system_icon_height"
                 android:layout_gravity="center_vertical|end"
                 android:layout_weight="1"
-                android:src="@drawable/ic_school_black_24dp" />
+                android:src="@drawable/ic_share_black_24dp" />
         </LinearLayout>
-
 
         <!-- -->
 
@@ -55,7 +81,137 @@
             android:background="#1F000000" />
 
         <LinearLayout
-            android:id="@+id/school_email_info"
+            android:id="@+id/school_overview_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:orientation="vertical"
+                android:padding="@dimen/school_info_container_padding">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4"
+                        android:text="Overview"
+                        android:textColor="#000"
+                        android:textSize="@dimen/section_header"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/school_overview_arrow"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/system_icon_height"
+                        android:layout_gravity="end"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_arrow_drop_down_black_24dp" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/school_overview_short"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="4"
+                    android:text="Information Unavailable"
+                    android:textColor="#000"
+                    android:textSize="@dimen/section_info" />
+
+                <TextView
+                    android:id="@+id/school_overview_full"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Information Unavailable"
+                    android:textColor="#000"
+                    android:textSize="@dimen/section_info"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <!-- -->
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#1F000000" />
+
+        <LinearLayout
+            android:id="@+id/school_extracurricular_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:orientation="vertical"
+                android:padding="@dimen/school_info_container_padding">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4"
+                        android:text="Extracurricular Activities"
+                        android:textColor="#000"
+                        android:textSize="@dimen/section_header"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/school_overview_arrow2"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/system_icon_height"
+                        android:layout_gravity="end"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_arrow_drop_down_black_24dp" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/school_extracurricular_activities_short"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:text="Art, Basketball, Poetry, Soccer"
+                    android:textColor="#000"
+                    android:textSize="@dimen/section_info" />
+
+                <TextView
+                    android:id="@+id/school_extracurricular_activities_full"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Art, Basketball, Poetry, Soccer"
+                    android:textColor="#000"
+                    android:textSize="@dimen/section_info"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <!-- -->
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#1F000000" />
+
+        <LinearLayout
+            android:id="@+id/school_number_students_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -70,16 +226,16 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="E-mail"
+                    android:text="Total Number of Students"
                     android:textColor="#000"
                     android:textSize="@dimen/section_header"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/school_email"
+                    android:id="@+id/total_students"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="lic@school.edu"
+                    android:text="435"
                     android:textColor="#000"
                     android:textSize="@dimen/section_info" />
             </LinearLayout>
@@ -89,7 +245,7 @@
                 android:layout_height="@dimen/system_icon_height"
                 android:layout_gravity="center_vertical|end"
                 android:layout_weight="1"
-                android:src="@drawable/ic_email_black_24dp" />
+                android:src="@drawable/ic_people_black_24dp" />
         </LinearLayout>
 
         <!-- -->
@@ -145,7 +301,7 @@
             android:background="#1F000000" />
 
         <LinearLayout
-            android:id="@+id/school_number_students_info"
+            android:id="@+id/school_email_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -160,16 +316,16 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Total Number of Students"
+                    android:text="E-mail School"
                     android:textColor="#000"
                     android:textSize="@dimen/section_header"
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/total_students"
+                    android:id="@+id/school_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="435"
+                    android:text="lic@school.edu"
                     android:textColor="#000"
                     android:textSize="@dimen/section_info" />
             </LinearLayout>
@@ -179,7 +335,7 @@
                 android:layout_height="@dimen/system_icon_height"
                 android:layout_gravity="center_vertical|end"
                 android:layout_weight="1"
-                android:src="@drawable/ic_people_black_24dp" />
+                android:src="@drawable/ic_email_black_24dp" />
         </LinearLayout>
 
         <!-- -->
